--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
