--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.7.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-qr-code": "^2.0.18",
