Added Official ID Card Generator with QR, Batch Print, and Signature Upload

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@yudiel/react-qr-scanner": "^2.5.0",
     "emoji-picker-react": "^4.4.10",
     "firebase": "^12.7.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-easy-crop": "^5.5.6",
